--- a/indexprod.html
+++ b/indexprod.html
@@ -1,6 +1,6 @@
 <html>
 <body bgcolor='blue' border="10">		
-	<p> new paragraph </p>
+	<p> new paragraph final </p>
 	<p> hello prod page </p>
 </body>
 </html>
