--- a/indexprod.html
+++ b/indexprod.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor='blue' border="10">		
+<body bgcolor='green' border="10">		
 	<p> new paragraph final </p>
 	<p> hello prod page </p>
 </body>
