--- a/indexprod.html
+++ b/indexprod.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor='green' border="15" >		
+<body bgcolor='green' img='a.png'>		
 	<p> new parag raph final </p>
 	<p> hello prod page </p>
 </body>
