--- a/indexprod.html
+++ b/indexprod.html
@@ -1,6 +1,7 @@
 <html>
-<body bgcolor='green' img='a.png'>		
-	<p> new parag raph final </p>
+<body bgcolor='yellow' img='a.png'>		
+	<p> new paragraph final </p>
 	<p> hello prod page </p>
+	<p> finally chal gaya </p>
 </body>
 </html>
