--- a/indexprod.html
+++ b/indexprod.html
@@ -1,5 +1,5 @@
 <html>
-<body bgcolor='yellow' img='a.png'>		
+<body bgcolor='cyan' img='a.png'>		
 	<p> new paragraph final </p>
 	<p> hello prod page </p>
 	<p> finally chal gaya </p>
